src/styles/aside.scss
.menu {
  @include paddingInline;
  background-color: $c-green;
  height: 100vh;
  top: 0;
  left: 0;
  right: 0;
  transform: translateX(-100%);
  opacity: 0;
  color: $c-white;

  position: fixed;
  pointer-events: none;
  transition: all 0.3s;

  &:target {
    opacity: 1;
    pointer-events: all;
    transform: translateX(0);
    z-index: 1;
  }

  @include onTablet {
    background: $c-green
      url(..//images/pictures/2.png) center bottom / 422px auto no-repeat;
  }

  @include onDesctop {
    background: $c-green
      url(..//images/pictures/2.png) right bottom / 624px auto no-repeat;
  }

  &__nav {
    padding-block: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;

    @include onDesctop {
      padding-block: 32px;
    }
  }

  &__conteiner {
    display: flex;
    align-items: center;
    gap: 30px;
  }

  &__dropdown {
    position: relative;
    display: inline-block;
    box-sizing: border-box;
  }

  &__dropdown__content {
    display: none;
    position: absolute;
    z-index: 1;
  }

  &__dropdown__link {
    text-decoration: none;
    color: $c-white;

    &::after {
      content: url(../images/icons/dropdown.svg);
      width: 8px;
      padding-left: 5px;
    }

    &:hover {
      border-bottom: 1px solid $c-white;
      width: fit-content;
    }
  }

  &__list {
    border-bottom: 1px solid $c-white;
    padding-bottom: 40px;
    margin-bottom: 40px;

    @include onDesctop {
      width: 570px;
      padding-bottom: 60px;
      margin-bottom: 60px;
    }
  }

  &__text__container {
    display: flex;
    gap: 123px;
  }

  &__text {
    @include forDescriptions;
    // font-weight: 400;
    // font-size: 14px;
    line-height: 19px;
    color: $c-white;
    text-decoration: none;
    padding-bottom: 20px;

    @include forLinks;

    @include onDesctop {
      padding-bottom: 70px;
    }
  }

  &__text--bold {
    @include forDescriptions;
    font-weight: 600;
    // font-size: 16px;
    // line-height: 24px;
  }

  &__item__list {
    padding-top: 20px;
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 20px;

    @include onDesctop {
      gap: 60px;
    }
  }

  &__link {
    text-decoration: none;
    color: $c-white;
    @include forNames;
    // font-family: "Playfair Display", serif;
    // font-weight: 700;
    // font-size: 20px;
    line-height: 30px;

    @include onTablet {
      font-size: 48px;
      line-height: 57px;
      @include forLinks;
    }
  }

  &__btn {
    @include forBtn;
  }
}

